Added network analysis

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -11,3 +11,5 @@ editor_options:
 Welcome to my research website.
 
 [This code cleans and explore the data](1-explore.html)
+
+[This code performs network analysis](2-network.html)
